Various Gear Updates
Remap THF/RDM engaged sets.
Add Malignance Gear to jobs.
Disable auto lockstyle on jobs.
Implement Self_command to lock styles

--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@ triggers.lua
 user_functions.lua
 validate.lua
 version_history.txt
-data/User-Globals.lua
+#*data/User-Globals.lua
 beta_examples_and_information/*
 data/instructions.txt
 libs/Mote-*
